ui changes - ingredient + tool shelf

--- a/static/main.css
+++ b/static/main.css
@@ -297,16 +297,25 @@ body {
 
 /*end quiz css*/
 :root {
-    --background-cup: rgb(0, 0, 0);
+    --background-cup: #8b6b56;
 }
 
 #selection{
     font-size: large;
 }
 
-.ingredient_label {
+.ingredient_label, .tool_button {
     display: inline-block;
+    padding: 10px;
+    transition-timing-function: ease;
+    transition-duration: 0.1s;
 }
+
+.ingredient_label:hover, .tool_button:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
 .unacceptable{
   border: 2px solid red;
   border-radius: 4px;
@@ -374,3 +383,493 @@ body {
     border-radius: 15%;
     margin-top: 20px;
 }
+
+/* tools */
+
+#whisk-ring-outer {
+    margin-left: 18px;
+    width: 12px; height: 12px;
+    padding: 3px;
+    background: linear-gradient(to right, #CCCCCC, #9D9D9D);
+    background: -webkit-linear-gradient(to right, #CCCCCC, #9D9D9D);
+      background: -moz-linear-gradient(to right, #CCCCCC, #9D9D9D);
+      background: -ms-linear-gradient(to right, #CCCCCC, #9D9D9D);
+      background: -o-linear-gradient(to right, #CCCCCC, #9D9D9D);
+    border-radius: 50%;
+  }
+  
+  #whisk-ring-inner {
+    display: block;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: #e5d2a7;
+  }
+  
+  #whisk-handle {
+    margin-left: 14px;
+    height: 80px;
+    width: 20px;
+    border-radius: 5px 5px 5px 5px;
+    background: linear-gradient(to right, #CCCCCC, #9D9D9D);
+    background: -webkit-linear-gradient(to right, #CCCCCC, #9D9D9D);
+      background: -moz-linear-gradient(to right, #CCCCCC, #9D9D9D);
+      background: -ms-linear-gradient(to right, #CCCCCC, #9D9D9D);
+      background: -o-linear-gradient(to right, #CCCCCC, #9D9D9D);
+    
+  }
+  
+  #whisk-handle:before {
+    display: block;
+    position: relative;
+    top: 50px;
+    font-family: 'Mulish', sans-serif;
+    font-weight: bold;
+    color: #4E4E4E;
+    content: 'WHISK';
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+  }
+  
+  #whisk-handle-divot {
+    margin-left: 15px;
+    border: 2px solid #CCCCCC;
+    width: 20px;
+  }
+  
+  .whisk-tongs {
+    position: relative;
+    height: 3rem;
+    width: 3rem;
+    border: 0.25rem solid #CCCCCC;
+    border-radius: 0% 100% 45% 55% / 0% 55% 45% 100%;
+    transform: rotate(45deg);
+    transform-origin: 50%;
+    z-index: -1;
+    margin-bottom: -2rem;
+  }
+  .whisk-tongs::after {
+                  content: "";
+                  position: absolute;
+                  top: 0;
+                  left: 50%;
+                  bottom: 0;
+                  height: 100%;
+                  width: 100%;
+                  border-radius: 0% 100% 20% 80% / 0% 80% 20% 100%;
+                  transform: translateX(-50%) scale(0.75);
+                  margin-top: -0.5rem;
+                  margin-left: -0.5rem;
+                  border: 0.25rem solid #9D9D9D;
+  }
+
+
+  #microwave-body {
+    display: flex;
+    align-items: center;
+    height: 100px;
+    width: 150px;
+    border-radius: 5%;
+    background: #E1DDF5;
+  }
+  
+  #microwave-door { 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    width: 110px;
+    border-right: 10px solid #8A8BB4;
+    font-size: 70%;
+    text-align: center;
+    font-family: 'Mulish', sans-serif;
+    color: #E1DDF5;
+  }
+  
+  #microwave-window {
+    width: 75%;
+    height: 70%;
+    border: 10px solid #454562;
+    background: #7072A1;
+    background-image: linear-gradient(80deg, #7072A1 40%, #5D5D86 60%);
+  }
+  
+  #microwave-controls {
+    margin-left: 5px;
+    display: flex;
+    flex-direction: column;
+    width: 25px;
+  }
+  
+  #microwave-display {
+    height: 10px;
+    width: 100%;
+    background: #454562;
+    color: green;
+    font-size: 50%;
+    text-align: center;
+    font-family: 'Mulish', sans-serif;
+  }
+  
+  #microwave-buttons {
+    margin-top: 5px;
+    padding: 3px;
+    height: 20px;
+    width: 100%;
+    background-image: linear-gradient(to right, #8A8BB4,#7072A1);
+    background-repeat: repeat;
+    background-size: 20%;
+  }
+
+/* ingredients */
+#coffee-lid {
+    width: 80px; height: 20px;
+    background-image: linear-gradient(to right, #392828 , #090404);
+    border-radius: 5px;
+  }
+  
+  #coffee-jar {
+    font-style: sans-serif;
+    width: 80px;
+    height: 80px;
+    border-top: 10px solid #DEDEDB;
+    border-bottom: 3px solid #DEDEDB;
+    border-radius: 10% 10% 25% 25%;
+    background-image: linear-gradient(to right, #672008 , #341604);
+    overflow: hidden;
+  }
+  
+  #coffee-label {
+    display: block;
+    position: relative;
+    color: white;
+    font-family: "Mulish", sans-serif;
+    font-weight: bold;
+    text-align: center;
+    font-size: 13px;
+    top: 15%;
+  }
+
+  #sugar-bag-overlay {
+    position: absolute;
+    opacity: 0.3;
+    background-image: linear-gradient(to right, rgba(0,0,0,0) 30%, black 90%);
+    left: 85px;
+    height: 150px;
+    width: 25px;
+    border-radius: 10px 10px 5px 5px;
+  }
+  
+  #sugar-bag {
+    height: 150px;
+    width: 100px;
+    border-radius: 10px 10px 5px 5px;
+    
+    background: linear-gradient(155deg, white 40%,#141F69 40% 50%, #F8F05A 50%);
+    
+  }
+  
+  #sugar-label1 {
+    position: absolute;
+    top: 45px; left: 10px;
+    font-family: 'Mulish', sans-serif;
+    font-weight: 900;
+    color: #141F69;
+    transform: rotate(335deg);
+    font-size: 18px;
+  }
+  
+  #sugar-label2 {
+    position: absolute;
+    top: 40px;
+  }
+
+  #Milk {
+    display: inline-block;
+    width: 174px;
+    height: 174px;
+    overflow: hidden;
+  } 
+  #milk-center {
+      transform: scale(0.75) translateY(-20px) translateX(-40px);
+    }
+    
+#milk-front {
+    left: 50px;
+    position: relative;
+    width: 80px;
+    height: 200px;
+    background: #5FB5F1;
+    border-bottom-left-radius: 5px;
+}
+#milk-side {
+    top: -200px;
+    left: 130px;
+    position: relative;
+    width: 60px;
+    height: 200px;
+    background: #4EA4DF;
+}
+#milk-top-blue {
+    position: relative;
+    transform: skewX(-30deg);
+    top: -500px;
+    left: 65px;
+    width: 80px;
+    height: 50px;
+    background: #5FB5F1;
+}
+#milk-top-white {
+    position: relative;
+    transform: skewX(30deg);
+    top: -450px;
+    left: 95px;
+    width: 80px;
+    height: 50px;
+    background: #F2E9CC;
+}
+
+#milk-tip {
+    border-top-right-radius: 5px;
+    position: relative;
+    top: -565px;
+    left: 80px;
+    width: 80px;
+    height: 15px;
+    background: #F2E9CC;
+}
+#milk-front-label {
+    color: #4EA4DF;
+    font-size: 40px;
+    text-align: center;
+    font-family: 'Mulish', sans-serif;
+    position: relative;
+    top: -470px;
+    left: 50px;
+    width: 80px;
+    height: 60px;
+    background: #F2E9CC;
+}
+#milk-side-label {
+    position: relative;
+    top: -530px;
+    left: 130px;
+    width: 60px;
+    height: 60px;
+    background: #E0D5BF;
+}
+
+#water-bottle {
+    margin-top: 70px;
+    border-width: 3px;
+    border-style: solid;
+    border-image: linear-gradient(to right, #E5F0F8, #EDF8FE) 3;
+    width: 50px;
+    height: 100px;
+    transform: perspective(10px) rotateX(-2deg) scale(1.2);
+    overflow: hidden;
+}
+    
+#water-liquid {
+position: absolute;
+top: 10px;
+height: 100%; width: 100%;
+background: #C6E3F8;
+font-size: 12px;
+font-family: 'Mulish', sans-serif;
+color: white;
+text-align: center;
+}
+
+#cocoa-jar {
+    height: 100px; width: 100px;
+    border-radius: 0% 0% 5% 5%;
+    background: linear-gradient(to right, #784725,#683513);
+    border-bottom: 4px solid #E9E9E9;
+    border-top: 10px solid #E0C962;
+  }
+  
+  #cocoa-label {
+    margin: auto;
+    margin-top: 20px;
+    text-align: center;
+    background: linear-gradient(to right,#364BD3, #213ADA);
+    font-family: 'Mulish', sans-serif;
+    color: white;
+    border-top: 2px solid #E0C962;
+    border-bottom: 2px solid #E0C962;
+  }
+
+
+  #vanilla-container {
+    display: inline-block;
+  }
+  
+  #vanilla-neck {
+    margin: auto;
+    width: 18px;
+    height: 20px;
+    border-left: 2px solid #D8D8D8;
+    border-right: 2px solid #D8D8D8;
+    transform: perspective(10px) rotateX(2deg);
+    border-top: 10px solid #3D1111;
+    border-bottom: 20px solid #3D1111;
+  }
+  
+  #vanilla-bottle {
+    margin: auto;
+    width: 55px;
+    height: 110px;
+    border: 2px solid #D8D8D8;
+    border-radius: 25% 25% 0 0 / 10% 10% 0 0;
+    overflow: hidden;
+  }
+  
+  #vanilla-extract {
+    margin: auto;
+    height: 100%; width: 93%;
+    background: #331817;
+    padding-top: 8px;
+  }
+  
+  #vanilla-label {
+    text-align: center;
+    margin: auto;
+    padding: 2px;
+    background:#fbf9fa;
+    border-radius: 10%;
+    font-family: 'Mulish', sans-serif;
+    font-size: 10px;
+    color: #331817;
+  }
+
+  #marshmallow-bowl {
+    height: 100px; width: 150px;
+    border: 2px solid #D2E8F8;
+    overflow: hidden;
+    border-radius: 5%;
+    background-color: white;
+  }
+  
+  #marshmallow-label {
+    margin: auto;
+    margin-top: -20px;
+    opacity: 0.8;
+    height: 120%; width: 80%;
+    background: linear-gradient(to right, #ec77ae 20%,#e52c48 20% 40%,#f89408 40% 60%,#039437 60% 80%,#139ce1 80%);
+    color: white;
+    font-family: 'Mulish', sans-serif;
+    font-weight: bold;
+    text-shadow: 2px 2px #e52c48;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 30px;
+    border-radius: 25%;
+    transform: perspective(10px) rotateX(0.5deg);
+  }
+
+  #matcha-container {
+      padding-top: 10px;
+      display: inline-block;
+      height: 100px;
+      width: 80px;
+      overflow: hidden;
+  }
+  
+  #matcha-jar {
+    font-style: sans-serif;
+    width: 80px;
+    height: 80px;
+    border-top: 5px solid #DEDEDB;
+    border-bottom: 3px solid #A6A95C;
+    border-radius: 0% 0% 25% 25%;
+    background-image: linear-gradient(to right, #49A66A , #07672F);
+  }
+  
+  #matcha-label {
+    display: block;
+    position: relative;
+    color: white;
+    font-family: "Mulish", sans-serif;
+    font-weight: bold;
+    text-align: center;
+    top: 50%;
+    border-top: 1.5px solid white;
+    border-bottom: 1.5px solid white;
+  }
+  
+  #matcha-powder {
+      width: 80px; height: 10px;
+      
+      background: #49A66A;
+      background: linear-gradient(top, #9CC957 15%, #356101 100%);
+      background: -webkit-linear-gradient(top, #9CC957 15%, #356101 100%);
+      background: -moz-linear-gradient(top, #9CC957 15%, #356101 100%);
+      background: -ms-linear-gradient(top, #9CC957 15%, #356101 100%);
+      background: -o-linear-gradient(top, #9CC957 15%, #356101 100%);
+      
+      border-radius: 60px 60px 0 0;
+      -webkit-border-radius: 60px 60px 0 0;
+      -moz-border-radius: 60px 60px 0 0;
+      
+      position: relative;
+  }
+  
+  #matcha-powder:after, #matcha-powder:before {
+      content: '';
+      position: absolute;
+      background: #9CC957;
+      z-index: -1;
+  }
+  
+  #matcha-powder:after {
+      width: 60px; height: 60px;
+      top: -12px; left: 5px;
+      
+      border-radius: 600px 600px 0 0;
+      -webkit-border-radius: 600px 600px 0 0;
+      -moz-border-radius: 600px 600px 0 0;
+  }
+  
+  #matcha-powder:before {
+      width: 30px; height: 40px;
+      top: -12px; right: 7px;
+      border-radius: 600px 600px 0 0;
+      -webkit-border-radius: 600px 600px 0 0;
+      -moz-border-radius: 600px 600px 0 0;
+    background: linear-gradient(top, #9CC957 15%, #356101 100%);
+      background: -webkit-linear-gradient(top, #9CC957 15%, #356101 100%);
+      background: -moz-linear-gradient(top, #9CC957 15%, #356101 100%);
+      background: -ms-linear-gradient(top, #9CC957 15%, #356101 100%);
+      background: -o-linear-gradient(top, #9CC957 15%, #356101 100%);
+  }
+  
+  #honey-lid {
+    margin: auto;
+    height: 15px;
+    width: 60px;
+    background: #bcb96b;
+    border-radius: 5%;
+  }
+  
+  #honey-jar {
+    height: 100px; width: 80px;
+    background: linear-gradient(to right, #df7602, #eaa229);
+    border-radius: 20%;
+    border-bottom: 3px solid #dcaf07;
+  }
+  
+  #honey-label {
+    position: absolute;
+    top: 40px; 
+    width: 80px;
+    background: linear-gradient(to right, #ededeb, #fbfbfe);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    color: #787272;
+  }
+
