--- a/static/main.css
+++ b/static/main.css
@@ -293,6 +293,20 @@ body {
     cursor: pointer;
     margin-top: 8px;
 }
+
+.end_of_quiz_button{
+    width: 175px;
+    border: none;
+    height: 55px;
+    border-radius: 12px;
+    cursor: pointer;
+    margin-top: 8px;
+}
+
+
+
+
+
 /*start quiz css*/
 
 /*end quiz css*/
@@ -397,7 +411,7 @@ body {
       background: -o-linear-gradient(to right, #CCCCCC, #9D9D9D);
     border-radius: 50%;
   }
-  
+
   #whisk-ring-inner {
     display: block;
     width: 7px;
@@ -405,7 +419,7 @@ body {
     border-radius: 50%;
     background: #e5d2a7;
   }
-  
+
   #whisk-handle {
     margin-left: 14px;
     height: 80px;
@@ -416,9 +430,9 @@ body {
       background: -moz-linear-gradient(to right, #CCCCCC, #9D9D9D);
       background: -ms-linear-gradient(to right, #CCCCCC, #9D9D9D);
       background: -o-linear-gradient(to right, #CCCCCC, #9D9D9D);
-    
+
   }
-  
+
   #whisk-handle:before {
     display: block;
     position: relative;
@@ -433,13 +447,13 @@ body {
     -ms-transform: rotate(-90deg);
     -o-transform: rotate(-90deg);
   }
-  
+
   #whisk-handle-divot {
     margin-left: 15px;
     border: 2px solid #CCCCCC;
     width: 20px;
   }
-  
+
   .whisk-tongs {
     position: relative;
     height: 3rem;
@@ -475,8 +489,8 @@ body {
     border-radius: 5%;
     background: #E1DDF5;
   }
-  
-  #microwave-door { 
+
+  #microwave-door {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -488,7 +502,7 @@ body {
     font-family: 'Mulish', sans-serif;
     color: #E1DDF5;
   }
-  
+
   #microwave-window {
     width: 75%;
     height: 70%;
@@ -496,14 +510,14 @@ body {
     background: #7072A1;
     background-image: linear-gradient(80deg, #7072A1 40%, #5D5D86 60%);
   }
-  
+
   #microwave-controls {
     margin-left: 5px;
     display: flex;
     flex-direction: column;
     width: 25px;
   }
-  
+
   #microwave-display {
     height: 10px;
     width: 100%;
@@ -513,7 +527,7 @@ body {
     text-align: center;
     font-family: 'Mulish', sans-serif;
   }
-  
+
   #microwave-buttons {
     margin-top: 5px;
     padding: 3px;
@@ -530,7 +544,7 @@ body {
     background-image: linear-gradient(to right, #392828 , #090404);
     border-radius: 5px;
   }
-  
+
   #coffee-jar {
     font-style: sans-serif;
     width: 80px;
@@ -541,7 +555,7 @@ body {
     background-image: linear-gradient(to right, #672008 , #341604);
     overflow: hidden;
   }
-  
+
   #coffee-label {
     display: block;
     position: relative;
@@ -562,16 +576,16 @@ body {
     width: 25px;
     border-radius: 10px 10px 5px 5px;
   }
-  
+
   #sugar-bag {
     height: 150px;
     width: 100px;
     border-radius: 10px 10px 5px 5px;
-    
+
     background: linear-gradient(155deg, white 40%,#141F69 40% 50%, #F8F05A 50%);
-    
+
   }
-  
+
   #sugar-label1 {
     position: absolute;
     top: 45px; left: 10px;
@@ -581,7 +595,7 @@ body {
     transform: rotate(335deg);
     font-size: 18px;
   }
-  
+
   #sugar-label2 {
     position: absolute;
     top: 40px;
@@ -592,11 +606,11 @@ body {
     width: 174px;
     height: 174px;
     overflow: hidden;
-  } 
+  }
   #milk-center {
       transform: scale(0.75) translateY(-20px) translateX(-40px);
     }
-    
+
 #milk-front {
     left: 50px;
     position: relative;
@@ -672,7 +686,7 @@ body {
     transform: perspective(10px) rotateX(-2deg) scale(1.2);
     overflow: hidden;
 }
-    
+
 #water-liquid {
 position: absolute;
 top: 10px;
@@ -691,7 +705,7 @@ text-align: center;
     border-bottom: 4px solid #E9E9E9;
     border-top: 10px solid #E0C962;
   }
-  
+
   #cocoa-label {
     margin: auto;
     margin-top: 20px;
@@ -707,7 +721,7 @@ text-align: center;
   #vanilla-container {
     display: inline-block;
   }
-  
+
   #vanilla-neck {
     margin: auto;
     width: 18px;
@@ -718,7 +732,7 @@ text-align: center;
     border-top: 10px solid #3D1111;
     border-bottom: 20px solid #3D1111;
   }
-  
+
   #vanilla-bottle {
     margin: auto;
     width: 55px;
@@ -727,14 +741,14 @@ text-align: center;
     border-radius: 25% 25% 0 0 / 10% 10% 0 0;
     overflow: hidden;
   }
-  
+
   #vanilla-extract {
     margin: auto;
     height: 100%; width: 93%;
     background: #331817;
     padding-top: 8px;
   }
-  
+
   #vanilla-label {
     text-align: center;
     margin: auto;
@@ -753,7 +767,7 @@ text-align: center;
     border-radius: 5%;
     background-color: white;
   }
-  
+
   #marshmallow-label {
     margin: auto;
     margin-top: -20px;
@@ -778,7 +792,7 @@ text-align: center;
       width: 80px;
       overflow: hidden;
   }
-  
+
   #matcha-jar {
     font-style: sans-serif;
     width: 80px;
@@ -788,7 +802,7 @@ text-align: center;
     border-radius: 0% 0% 25% 25%;
     background-image: linear-gradient(to right, #49A66A , #07672F);
   }
-  
+
   #matcha-label {
     display: block;
     position: relative;
@@ -800,40 +814,40 @@ text-align: center;
     border-top: 1.5px solid white;
     border-bottom: 1.5px solid white;
   }
-  
+
   #matcha-powder {
       width: 80px; height: 10px;
-      
+
       background: #49A66A;
       background: linear-gradient(top, #9CC957 15%, #356101 100%);
       background: -webkit-linear-gradient(top, #9CC957 15%, #356101 100%);
       background: -moz-linear-gradient(top, #9CC957 15%, #356101 100%);
       background: -ms-linear-gradient(top, #9CC957 15%, #356101 100%);
       background: -o-linear-gradient(top, #9CC957 15%, #356101 100%);
-      
+
       border-radius: 60px 60px 0 0;
       -webkit-border-radius: 60px 60px 0 0;
       -moz-border-radius: 60px 60px 0 0;
-      
+
       position: relative;
   }
-  
+
   #matcha-powder:after, #matcha-powder:before {
       content: '';
       position: absolute;
       background: #9CC957;
       z-index: -1;
   }
-  
+
   #matcha-powder:after {
       width: 60px; height: 60px;
       top: -12px; left: 5px;
-      
+
       border-radius: 600px 600px 0 0;
       -webkit-border-radius: 600px 600px 0 0;
       -moz-border-radius: 600px 600px 0 0;
   }
-  
+
   #matcha-powder:before {
       width: 30px; height: 40px;
       top: -12px; right: 7px;
@@ -846,7 +860,7 @@ text-align: center;
       background: -ms-linear-gradient(top, #9CC957 15%, #356101 100%);
       background: -o-linear-gradient(top, #9CC957 15%, #356101 100%);
   }
-  
+
   #honey-lid {
     margin: auto;
     height: 15px;
@@ -854,17 +868,17 @@ text-align: center;
     background: #bcb96b;
     border-radius: 5%;
   }
-  
+
   #honey-jar {
     height: 100px; width: 80px;
     background: linear-gradient(to right, #df7602, #eaa229);
     border-radius: 20%;
     border-bottom: 3px solid #dcaf07;
   }
-  
+
   #honey-label {
     position: absolute;
-    top: 40px; 
+    top: 40px;
     width: 80px;
     background: linear-gradient(to right, #ededeb, #fbfbfe);
     padding-top: 20px;
@@ -872,4 +886,3 @@ text-align: center;
     text-align: center;
     color: #787272;
   }
-
