fixed UI to include directions

--- a/templates/learn.html
+++ b/templates/learn.html
@@ -15,12 +15,15 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12">
+        <div class="col-6">
+            <div id="directions_label"> Drag and drop ingredients to add them to the drink.<br> Click on tools to use them. </div>
+        </div>
+        <div class="col-6">
             <div id="step_label"> Step: Add </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-12">
+        <div class="col-6">
             <div id="shelf_label"> Ingredient and Tool Shelf: </div>
         </div>
     </div>
@@ -43,6 +46,11 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12">
+                    <div id="quiz_button_add"></div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
@@ -50,9 +58,7 @@
             <div id="drink_tools">
             </div>
         </div>
-        <div class="col-6">
-            <div id="quiz_button_add"></div>
-        </div>
     </div>
 
 {% endblock %}
+
